--- a/ClimateController/ClimateController.csproj
+++ b/ClimateController/ClimateController.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -10,5 +10,11 @@
     <Authors>tmplt.io</Authors>
     <Description>Apartment climate controller</Description>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.*" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.*" />
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="8.*" />
+  </ItemGroup>
 
 </Project>
